Fix QQ URL encoding for Java 8 compatibility